<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wyloguj"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/mobilnyciuch"
        android:textColor="#000"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="110dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_addClothes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dodanie_ubrania_do_kolekcji"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/button_collectionPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/podgl_d_kolekcji"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/button_creatingSets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tworzenie_zestawu"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/button_setPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/podgl_d_zestawu"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

</RelativeLayout>
